--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,9 +2,10 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 }
+
 
 .App-logo {
   height: 40vmin;
