--- a/frontend/src/css/createPost.css
+++ b/frontend/src/css/createPost.css
@@ -1,3 +1,12 @@
+.s-createPost{
+    display: flex;
+    min-height: 95vh;
+    flex-direction: column;
+    justify-content: space-between;
+    /* margin: 10px auto; */
+    width: 100%;
+}
+
 .createPost{
     max-width: 500px;
     margin: 10px auto;
