--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px 0;
+  padding: 10px;
 }
 body {
   box-sizing: border-box;
